# devfest2026

./: README.md
StudyNYC/: README.md  index.html  package-lock.json  package.json  server.py  vite.config.ts
StudyNYC/src/app/: App.tsx  routes.ts  types.ts
StudyNYC/src/app/components/: Header.tsx  ReviewSection.tsx  StudySpotCard.tsx
StudyNYC/src/app/contexts/: AuthContext.tsx
StudyNYC/src/app/layouts/: RootLayout.tsx
StudyNYC/src/app/lib/: supabase.ts
StudyNYC/src/app/pages/: HistoryPage.tsx  HomePage.tsx  LoginPage.tsx  NotFoundPage.tsx  ReviewWritePage.tsx  SignUpPage.tsx  SpotDetailPage.tsx
StudyNYC/src/app/utils/: initializeSpots.ts  locationUtils.ts
StudyNYC/supabase/functions/: deno.json
StudyNYC/supabase/functions/server/: index.tsx  kv_store.tsx
StudyNYC/utils/supabase/: info.tsx
authentication_server/: .env  Cargo.toml
authentication_server/src/: errors.rs  lib.rs  main.rs  models.rs
authentication_server/src/helpers/: database_interface.rs  math.rs
backend/backend/: main.py  pyproject.toml
frontend/study_map_nyc/: index.html  package-lock.json  package.json  vite.config.ts
